[package]
edition = "2021"
name = "b2"
publish = false
version = "0.3.2"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.15", features = ["derive"] }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
xdg = "2.5.2"

[dev-dependencies]
assert_cmd = "2.0.16"
temp-env = "0.3.6"
tempfile = "3.12.0"
