[package]
edition = "2021"
name = "b2"
publish = false
version = "0.6.0"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5.0"
xdg = "2.5"

[dev-dependencies]
assert_cmd = "2"
temp-env = "0.3"
tempfile = "3"
